# danish-meat-tax

./: .gitignore  README.md  pyproject.toml
docs/: beef_carbon_price_calibration.md  data_dictionary.md  methodology.md
docs/plans/: 2026-06-08-001-research-danish-meat-tax-plan.md  2026-06-09-001-research-food-only-normalized-panel-plan.md
docs/policy/: policy_summary.md
outputs/diagnostics/: panel_balance.csv  panel_balance_quarterly.csv  panel_commodity_counts.csv  panel_period_support.csv
outputs/models/: aggregate_trends.csv  ate.csv  ate_metadata.csv  event_study.csv  event_study_beef.csv  event_study_beef_metadata.csv  event_study_by_group.csv  event_study_dairy_cattle.csv  event_study_dairy_cattle_metadata.csv  event_study_lamb_sheep_goat.csv  event_study_lamb_sheep_goat_metadata.csv  event_study_metadata.csv  event_study_mixed_livestock.csv  event_study_mixed_livestock_metadata.csv  event_study_pork.csv  event_study_pork_metadata.csv  event_study_poultry_other_livestock.csv  event_study_poultry_other_livestock_metadata.csv  heterogeneity.csv  heterogeneity_metadata.csv  pretrend_summary.csv  synthetic_did.csv  synthetic_did_metadata.csv  synthetic_did_time_weights.csv  synthetic_did_trends.csv  synthetic_did_unit_weights.csv
outputs/models_quarterly/: aggregate_trends.csv  ate.csv  ate_metadata.csv  event_study.csv  heterogeneity.csv  (+12 more)
paper/: main.tex
scripts/: make_outputs.py
tests/: test_commodity_classifier.py  test_estimators.py  test_heissepreise_source.py  test_outputs.py  test_panel_builder.py  test_pipeline_smoke.py  test_policy_taxonomy.py
(+57 files in other folders)
